--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="fullscreen-body">
       <div id="left-image-bg">
         <div id="logo-bg">
-          <img src="/assets/img/odin-logo.png" alt="odin logo" />
+          <img src="./assets/img/odin-logo.png" alt="odin logo" />
         </div>
         <div id="logo-text">Odin</div>
         <p id="credit">credit to Halie West</p>
